fix overflow on playlist

--- a/src/styles/Playlist.module.scss
+++ b/src/styles/Playlist.module.scss
@@ -14,10 +14,27 @@
 .playlist {
     list-style: none;
     width: 100%;
+    height: 55rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    padding: 0 0.5rem;
+    overflow-y: auto;
+    padding-right: 1.5rem;
+
+    &::-webkit-scrollbar {
+        width: 1rem;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--color-controls-light);
+        border-radius: 1rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--color-text-light);
+        border-radius: 1rem;
+        border: none;
+    }
 }
 
 .entry {
